# swc-auto-add-testid

./: Cargo.toml  package.json
src/: lib.rs  tests.rs
